--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,1 +1,1 @@
-⚠️ V těchto dnech dochází k přenosu obsahu ze starého webu. Kdyby náhodou něco chybělo, nebo nefungovalo, omlouváme se a rychle to napravíme.
+Na tomto webu najdete jak naše výstupy, tak i výstupy jiných autorů.
